<resources>
    <string name="app_name">邮你</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="your_name">your name</string>
    <string name="post_express_company">express company</string>
    <string name="your_room_id">your room ID</string>
    <string name="your_phone_number">your phone number</string>
    <string name="express_size_big">big</string>
    <string name="express_size_mid">mid</string>
    <string name="express_size_small">small</string>
    <string name="express_isfragile_yes">yes</string>
    <string name="express_isfragile_no">no</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="time">time</string>

    <!--快递公司-->
    <string-array name="expressCompany">
        <item>全部</item>
        <item>圆通</item>
        <item>中通</item>
        <item>申通</item>
        <item>韵达</item>
        <item>京东</item>
        <item>顺丰</item>
        <item>如风达</item>
        <item>天天</item>
        <item>一统飞鸿</item>
        <item>全峰</item>
        <item>唯品会</item>
        <item>优速</item>
        <item>德邦</item>
    </string-array>

    <string-array name="Building">
        <item>全部</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>

    <string-array name="chooseSex">
        <item>男</item>
        <item>女</item>
    </string-array>

</resources>
