<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tongxin.youni.com.tongxin.youni.activity.PostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:backgroundTint="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <EditText
        android:id="@+id/name"
        android:hint="@string/your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!--<EditText-->
        <!--android:id="@+id/express_company"-->
        <!--android:hint="@string/post_express_company"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"/>-->

    <EditText
        android:id="@+id/phone"
        android:hint="@string/your_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/express_company"/>

    <EditText
        android:id="@+id/room"
        android:hint="@string/your_room_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="daxiao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/express_size"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/express_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:text="@string/express_size_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:text="@string/express_size_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <TextView
        android:text="yisui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/is_fragile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:text="@string/express_isfragile_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:text="@string/express_isfragile_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <TextView
        android:text="time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/time"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <RadioButton
            android:text="noon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="afternoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <EditText
        android:id="@+id/extra"
        android:hint="daxiaojianshifuyishui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
